Changed getTransactionsBetweenDates
- Now using DTOS
- LocalDate
- All the business logic is in the Service